# rustdoc-highlight

./: Cargo.toml  README.md
src/: escape.rs  lib.rs
