[package]
name = "rustdoc-highlight"
version = "0.1.10"
authors = ["The Rust Project Developers"]
description = "A Rust syntax highlighting library"
repository = "https://github.com/nrc/rustdoc-highlight"
readme = "README.md"
license = "Apache-2.0/MIT"
categories = ["development-tools", "web-programming"]

[dependencies]
log = "0.4"
